--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "vite": "^7.2.6"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "tailwindcss": "^4.1.17"
   }
 }
